fixed hover on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,6 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
- 
   .navbar {
     padding-bottom: 5px;
     .logo {
@@ -59,11 +58,11 @@ body {
     }
     ul {
       display: flex;
-  
+
       li {
         margin-right: 10px;
         list-style: none;
-       
+
         a {
           text-decoration: none;
           color: #000000;
@@ -77,10 +76,8 @@ body {
         }
       }
     }
-    }
   }
-    
-  
+}
 
 .profile {
   display: flex;
@@ -119,15 +116,14 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
- .profile{
-  flex-direction: column;
-  padding-top: 0;
- }
- .intro-section{
-  margin-top: -30px;
- }
-    
+  .profile {
+    flex-direction: column;
+    padding-top: 0;
   }
+  .intro-section {
+    margin-top: -30px;
+  }
+}
 
 .skillSection {
   display: flex;
@@ -142,7 +138,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  width: 800px;;
+  width: 800px;
   font-size: 25px;
   div {
     ul {
@@ -156,15 +152,23 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
-.listedSkills {
-  display: flex;
- flex-wrap: wrap;
-  justify-content: space-around;
-  width: 100%;
-  padding: 0;
-}
-    
+  .listedSkills {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+    padding: 0;
+    div {
+      ul {
+        li {
+          &:hover {
+            text-decoration: none;
+          }
+        }
+      }
+    }
   }
+}
 .project-section {
   margin-top: -150px;
   display: flex;
@@ -200,14 +204,13 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
- .project-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 0;
- }
-    
+  .project-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0;
   }
+}
 .project-card {
   padding: 20px;
   box-shadow: 5px 5px 20px rgb(165, 162, 162);
@@ -257,7 +260,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  
+
   .closeDiv {
     svg {
       height: 2em;
@@ -265,22 +268,20 @@ body {
     }
   }
   .modalInfo {
-    
     h3 {
       text-align: center;
     }
     .modalImages {
-      
       border: solid none;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-evenly;
       margin: 20px;
       padding-top: 20px;
-      
-      img{
+
+      img {
         max-width: 450px;
-        &:hover{
+        &:hover {
           transform: scale(1.3);
         }
       }
@@ -290,16 +291,15 @@ body {
 
 @media only screen and (max-width: 1000px) {
   .modalContainer {
- width: 100%;
- margin: 10px;
- .modalImages {
-  img{
     width: 100%;
+    margin: 10px;
+    .modalImages {
+      img {
+        width: 100%;
+      }
+    }
   }
- }
-   }
-
-  }
+}
 
 .footer {
   background-color: $secondary-color;
@@ -318,16 +318,14 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
- .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 200px;
-  div {
-
+  .footer {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    height: 200px;
+    div {
+      display: flex;
+      flex-direction: column;
+    }
   }
- }
-    
-  }
+}
